--- a/config-template.json
+++ b/config-template.json
@@ -3,6 +3,7 @@
     "type" : "chatgpt",
     "openai": {
       "api_key": "YOUR API KEY",
+      "api_base": "你的 baseUrl",
       "model": "gpt-3.5-turbo",
       "proxy": "",
       "conversation_max_tokens": 1000,
